modal overflow fix

--- a/source/scss/common/_modal.scss
+++ b/source/scss/common/_modal.scss
@@ -17,6 +17,7 @@
   bottom: 10%;
   left: 10%;
   padding: $doubleSpace;
+  overflow: auto;
 
   .mch-modal-close {
     position: absolute !important;
